// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render Spacer 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack css-53sr0l"
  data-g2-c16t="true"
  data-g2-component="HStack"
>
  <div
    class="wp-components-flex-item css-nokw1o"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-j1yu9m"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item wp-components-flex-block css-rw64f8"
    data-g2-c16t="true"
    data-g2-component="Spacer"
  />
  <div
    class="wp-components-flex-item css-1suoifq"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-j1yu9m"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;

exports[`props should render alignment 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack css-2r7rsp"
  data-g2-c16t="true"
  data-g2-component="HStack"
>
  <div
    class="wp-components-flex-item css-1cxb0nc"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-j1yu9m"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item css-1suoifq"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-j1yu9m"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack css-53sr0l"
  data-g2-c16t="true"
  data-g2-component="HStack"
>
  <div
    class="wp-components-flex-item css-1cxb0nc"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-j1yu9m"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item css-1suoifq"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-j1yu9m"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;

exports[`props should render spacing 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack css-53sr0l"
  data-g2-c16t="true"
  data-g2-component="HStack"
>
  <div
    class="wp-components-flex-item css-nokw1o"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-j1yu9m"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item css-1suoifq"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-j1yu9m"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;
